delete allDone added